# coca_projet

./: .gitignore  CMakeLists.txt  Makefile  README  doxygen.config  graphProblemSolver  graphProblemSolver-solution
examples/: Z3Example.c  tn_graphUsage.c
graphs/: test.dot
graphs/Colouring/: 3clique.dot  3colorableLarge.dot  3colorableMedium.dot  3colorableSmall.dot  not_3colorableClique.dot  not_3colorableLarge.dot  not_3colorableMedium.dot
graphs/TunnelNetwork/: exemple1.dot  exemple2.dot  exemple3.dot  mini_tunnel.dot  silly.dot  test_complexe.dot
include/ColouringProblem/: ColouredGraph.h  ColouringReduction.h  ColouringResolution.h
include/TunnelRouting/: TunnelBF.h  TunnelNetwork.h  TunnelReduction.h
include/main/: Graph.h  Parsing.h  Z3Tools.h
sol/: default_1.formu  default_10.form  default_2.formu  default_3.formu  default_4.formu  default_5.formu  default_6.formu  default_7.formu  default_8.formu  default_9.formu
src/ColouringProblem/: ColouredGraph.c  ColouringReduction.c  ColouringResolution.c
src/TunnelRouting/: TunnelBF.c  TunnelNetwork.c  TunnelReduction.c
src/main/: Graph.c  Z3Tools.c  main.c
src/parser/: Lexer.c  Lexer.h  Lexer.l  Parser.c  Parser.h  Parser.y
src/parser/include/: EdgeList.h  GraphList.h  NodeList.h
src/parser/src/: EdgeList.c  GraphListToGraph.c  NodeList.c  Parsing.c
